# NeFFmpegPlayer

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/sty/ne/ffmpegplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JniCallbackHelper.cpp  JniCallbackHelper.h  NeFFmpegPlayer.cpp  NeFFmpegPlayer.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/sty/ne/ffmpegplayer/: MainActivity.java  NeFFmpegPlayer.java
app/src/main/java/com/sty/ne/ffmpegplayer/util/: PermissionUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sty/ne/ffmpegplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
